<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Money Exchange</string>
    <string name="title_activity_main">Global Exchange Rates</string>
    <string name="hello_world">Hello World!</string>
    <string name="hello_info">Disclaimer</string>
    <string name="action_settings">Settings</string>
    <string name="icon">Info</string>
    <string name="deleteIcon">Delete\nAll</string>
    <string name="title_activity_sub">Info</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="title_activity_all_rates">Exchange Rates</string>
    <string name="title_activity_convert">Convert</string>
    <string name="title_activity_history">Conversion History</string>
    <string name="last_updated">Last updated: </string>
    <string name="convert_button_text">Convert</string>
    <string name="reset_button_text">Reset</string>
    <string name="currency_prompt">Choose a currency</string>
    <string name="title_activity_graph">Graphs</string>
    <string name="enter_dollars">Enter USD</string>
    <string name="press_convert">Press Convert button</string>
    <string name="the_dollars">U.S Dollars</string>
    <string name="the_result">Result</string>
    <string name="arrow_description">The Arrow</string>
    <string name="zoomable_scrollable">Graph is zoomable and scrollable</string>
    <string name="current_rates">Current Exchange Rates</string>
    <string name="the_license">License</string>
    <string name="loading_placeholder">LOADING…</string>
    <string name="result_result">Result: </string>
    <string name="button_one">Bar Graph</string>
    <string name="button_two">Line Graph</string>
    <string name="button_three">Point Graph</string>
    <string name="graph_select_text">Select graph type</string>


    <string-array name="tabs">
        <item>TAB 1</item>
        <item>TAB 2</item>
        <item>TAB 3</item>
    </string-array>


</resources>
